Connected JPA with Postgres DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=appluni
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+# Test properties:
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
