Authorisation (sign in/up)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.show-sql=true
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+
+# 256??????? ???? ? Base64 ? ?? ??????? ????? ???? ? ????????? ???????????!
+token.signing.key=KX3Z+/P1YtVf+qB8LjZNLyN3YfR2XcJdP4oPe1UiYUk=
