--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=root
 
 # Test properties:
 
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 spring.servlet.multipart.max-file-size=10MB
