--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Application properties
+/src/main/resources/application.properties
+/src/main/resources/application.yml
+
+# Alternatively, you can ignore all properties files
+# *.properties
