--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,10 @@ jobs:
       run: echo "${{ secrets.ENV_FILE_CONTENT }}" > .env
       
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag fntm04ka/appluni-backend:latest
+      # run: docker build . --file Dockerfile --tag fntm04ka/appluni-backend:latest
+      run: docker build --env-file .env --file Dockerfile --tag fntm04ka/appluni-backend:latest .
+      
+  
       
     - name: login to Dockerhub
       run:
